<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kevin.surewash.main_screen"
    android:background="@color/colorWhite"
    tools:showIn="@layout/activity_main_screen">


    <ImageView android:src="@drawable/surewashlogo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_us"
        android:id="@+id/textQuiz"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorAccent"
        android:layout_alignParentStart="true" />

    <!--Information Layout-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info_about"
        android:id="@+id/textInformation"
        android:textColor="@color/colorAccent"

        android:layout_marginTop="10dp"
        android:layout_below="@+id/textQuiz"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Quiz Button-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:id="@+id/buttonLearned"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textInformation"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/learnedSomethingText"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="70dp"
        android:layout_alignTop="@+id/buttonLearned"
        android:layout_alignRight="@+id/buttonLearned"
        android:layout_alignEnd="@+id/buttonLearned"
        android:layout_toRightOf="@+id/textQuiz"
        android:layout_toEndOf="@+id/textQuiz" />

    <!--Text Layout below buttons -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center"
        android:text="@string/qr_scan"
        android:id="@+id/textScan"
        android:layout_alignBottom="@+id/settingsText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/buttonLearned"
        android:layout_alignTop="@+id/settingsText"
        android:layout_alignRight="@+id/textQuiz"
        android:layout_alignEnd="@+id/textQuiz" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center"
        android:text="@string/settings"
        android:id="@+id/settingsText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center"
        android:text="@string/log_out"
        android:id="@+id/textLogOut"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/settingsText" />

</RelativeLayout>
